# unreal-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/unreal_mcp/: __init__.py  connection.py  heartbeat.py  provisioning.py  reconnect.py  remote_execution.py  server.py
src/unreal_mcp/resources/: content.py  level.py  world.py
src/unreal_mcp/tools/: _util.py  actors.py  assets.py  blueprints.py  editor.py  python_exec.py  umg.py  verification.py
tests/: conftest.py  test_actors.py  test_assets.py  test_blueprints.py  test_connection.py  test_direct_transport.py  test_editor.py  test_live.py
ue5-plugin/UnrealMCPStatus/: UnrealMCPStatus.uplugin
ue5-plugin/UnrealMCPStatus/Source/UnrealMCPStatus/: UnrealMCPStatus.Build.cs
ue5-plugin/UnrealMCPStatus/Source/UnrealMCPStatus/Private/: MCPHeartbeatListener.cpp  MCPHeartbeatListener.h  SMCPStatusWidget.cpp  SMCPStatusWidget.h  UnrealMCPStatusModule.cpp
ue5-plugin/UnrealMCPStatus/Source/UnrealMCPStatus/Public/: UnrealMCPStatusModule.h
